tests/ui/parser/issues/issue-63135.rs
// error-pattern: this file contains an unclosed delimiter
// error-pattern: aborting due to previous error
fn i(n{...,f #
